Fixed overlap issue on mobile between intro and skills

--- a/less/index.less
+++ b/less/index.less
@@ -160,6 +160,9 @@ header {
 // Skills Section 
 .skills {
 	.custom(flex-start, center);
+	@media (max-width: 500px) {
+		margin-top: 200px;
+	}
 
 	h2 {
 		height: 300px;
